2. development over time - a log of the changes I already made


----------------------------------------------------------------------
----------------------------------------------------------------------
1. extremeStat - future development
----------------------------------------------------------------------
----------------------------------------------------------------------

- distLextreme: 
# Include Bootstrapping with user-specified proportion left out
# add log argument

- distLprint:
# possibly change to print method for dlf objects with personal class

- distlquantile: 
# add option to use weighted average of fitted distributions

- installB:
# move to separate package and remove devtools dependency here
# put updatePackages stuff there as well



----------------------------------------------------------------------
----------------------------------------------------------------------
2. extremeStat - development over time
----------------------------------------------------------------------
----------------------------------------------------------------------


Version 0.5 (2015--)
various changes, see github commit log at
https://github.com/BerryBoessenkool/extremeStat/commits/master
highlights:
- failed parameter fitting is handled much better, warning messages became useful
- several defaults were improved 
- documentation was updated and enhanced
- distLgof now returns weights calculated by 3 different methods
- distLplot now uses supdist, package depends on lmomco >=2.1.3 (version that includes supdist)

new functions: installB, distLextremePlot, distLprint, distLquantile
renamed distLgofPlot for consistency in lowerCamel-derived case usage.


----------------------------------------------------------------------
----------------------------------------------------------------------


Version 0.4 (2014-12-04)
depends on berryFunctions again (maintaning functions twice is nonsense)
- distLgof now has ks and quiet argument