@@ -1,8 +1,8 @@
 Package: extremeStat
 Type: Package
 Title: Extreme Value Statistics on a Linear Scale
-Version: 0.4.12
-Date: 2015-03-19
+Version: 0.4.13
+Date: 2015-03-26
 Imports: lmomco (>= 2.1.3), berryFunctions, devtools
 Suggests: pbapply, extRemes
 Author: Berry Boessenkool
